--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <style>
 
 body {
-  background-image: url("http://res.cloudinary.com/mers/image/upload/v1502142220/sunset-clouds_p4gncs.jpg");
+  background-image: url("http://res.cloudinary.com/mers/image/upload/v1502151184/giphy_1_juapbo.webp");
   background-size: cover;
   background-repeat: no-repeat;
 }
