changing order of scripts

--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Portfolio</title>
+  <title>Local Weather App</title>
 
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-
-
-
-<link rel="stylesheet" href="https:////cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js">
 
   </head>
 <style>
@@ -94,12 +90,9 @@ h3 {
 
 </body>
 
-<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
-
-
-
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script type="text/javascript" src="index.js"></script>
 
 </html>
