separating html and css files

--- a/index.html
+++ b/index.html
@@ -1,70 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html >
 <head>
-  <title>Local Weather App</title>
+  <meta charset="UTF-8">
+  <title>API weather app (2)</title>
+  
+  
+  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
 
+      <link rel="stylesheet" href="style.css">
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  
+</head>
 
-  </head>
-<style>
-
-body {
-  background-image: url("http://res.cloudinary.com/mers/image/upload/v1502151184/giphy_1_juapbo.webp");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.jumbotron {
-  background-color: transparent !important
-  width: 60%;
-  margin: auto;
-  margin-top: 30px;
-  padding-top: 10px;
-}
-
-.jumbotron .title {
-  font-family: "Georgia";
-  color: #000000;
-  padding-top: 40px;
-  padding-bottom: 20px;
-}
-
-.jumbotron .weather {
-  color: #000000;
-}
-
-p.temp-type {
-  padding-top: 10px;
-  cursor: pointer;
-  color: #000000;
-}
-
-h2 {
-  font-size: 30px;
-}
-
-@media screen and (max-width: 700px) {
-  h2 {
-    font-size: 20px;
-  }
-}
-
-h3 {
-  color: #FFFFFF;
-  margin: 6px;
-  font-size: 20px
-}
-
-@media screen and (max-width:700px) {
-  h3 {
-    font-size: 15px;
-  }
-}
-
-
-</style>
-<body id="body">
+<body>
+  <body id="body">
   <div class="container">
     <div class="jumbotron">
       <div class="row">
@@ -89,10 +38,11 @@ h3 {
     </div>
 
 </body>
+  <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
+<script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
 
+    <script src="index.js"></script>
 
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-<script type="text/javascript" src="index.js"></script>
-
+</body>
 </html>
+
