call back google api

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.2.4.min.js">     
   <script type="text/javascript" src="index.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjKqcUIniUT9YLa90z-EotbBJOXXsB-u4&libraries=geometry">
-</script>
+      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjKqcUIniUT9YLa90z-EotbBJOXXsB-u4&callback=initMap"
+  type="text/javascript"></script>
     
 
 </body>
