--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
   
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="https://code.jquery.com/jquery-2.2.4.min.js">     
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js"> </script>    
   <script type="text/javascript" src="index.js"></script>
     
 
