--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
 </head>
 <body id="body">
-  <div class="container-fluid">
+  <div class="container">
     <div class="jumbotron">
       <div class="row">
         <h2 class="text-center title"> Current Weather</h2>
